Soon finished describing test 2

--- a/thesis/appendix.tex
+++ b/thesis/appendix.tex
@@ -67,7 +67,7 @@
 
 \subsection*{net.c}
 	\ccode{../server/net.c}
-\subsection*{net.h}
+\subsection*{net.h}\label{net.h}
 	\ccode{../server/net.h}
 
 \subsection*{gps\_serial.c}
