--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -149,7 +149,7 @@ texcl=false,
 
 \title{GPS Time Spoofing}
 \subtitle{A detection and mitigation system for GPS timing}
-\author{Aril Schultzen}
+\author{Aril Johannes 8Schultzen}
 \begin{document}
 \duoforside[dept={Institutt for informatikk},
 program={Informatikk: programmering og nettverk},
