--- a/thesis/conclusion.tex
+++ b/thesis/conclusion.tex
@@ -1,4 +1,4 @@
 \documentclass[../main.tex]{subfiles}
 
 \chapter{Conclusion}
-You should have done things different.
+The software that has been developed and is described in this report, demonstrates that it is possible to detect and mitigate a spoofing attack like the ones performed with the Civil GPS spoofer, with a spoof proof atomic clock controller. It also demonstrated the stability and capability of the Sensor Server architecture and implementation. 
