--- a/thesis/software.tex
+++ b/thesis/software.tex
@@ -1,11 +1,30 @@
 \documentclass[../main.tex]{subfiles}
 
 \chapter{Atomic clock controller implementation}
-\section{A Sensor Server/Client model} 
-The Sensor Server architecture is based on the idea that a GPS receiver and a computer can be viewed abstractly as a single device, a Sensor. The Server and Sensor communicates over a network using Internet protocol. The Sensor runs a trivial program that receives data from a GPS receiver, formats the data according to Sensor Server protocol and sends the data to a Server (more about the Client, see \ref{sensor_client}). The Server on the other hand, is responsible for the heavy lifting. Server tasks include:
+
+\section{Sensor Server architecture}
+When discussing how to implement the software realizing the spoof proof atomic clock controller, the following features and requirements were found: 
 \begin{itemize}
-  \item Handle connections to Sensors.
-  \item Update structures as Sensor status changes (disconnects or gets kicked out).
+  \item Needs to be fast in order to detect attacks early to maximize mitigation.
+  \item Needs extensive logging capabilities for forensics.
+  \item Needs access to all data in order to cross check and for maximum "situational awareness".
+  \item Should support as many GPS receivers as possible.
+  \item Easy interfacing, remote control.
+  \item Easy on the memory card.
+  \item Easy to configure.
+  \item Graphical user interface not a requirement
+\end{itemize}
+
+The Sensor Server architecture is based on the idea that a GPS receiver and a computer can be viewed abstractly as a single device, a Sensor. The Server and Sensor communicates over a network using Internet protocol. The Sensor runs a trivial program that receives data from a GPS receiver, formats the data according to Sensor Server protocol and sends the data to a Server (more about the Client, see \ref{sensor_client}). The Server on the other hand, is responsible for the heavy lifting.
+
+\subsection{Roles}\label{roles}
+A client connected to the server can have two roles. It can either be a Sensor or a Monitor. The Sensor role is already explained. The Monitor role was added in order for a user of the Sensor Server to connect to the server and check status or issue commands. For a client to assume the role of a Monitor, the client has to pick a negative integer as ID number. This way, the Server does not expect you as a client to report any NMEA data the way it would with a Sensor. The Monitor role can also be used to interface with the Server. See (\ref{interface}) for more.
+
+\section{The Sensor Server} 
+Figure \ref{bd} shows a simplified block diagram of the Sensor Server and its tasks. Server tasks include:
+\begin{itemize}
+  \item Handle connections to clients.
+  \item Update structures as clients status changes (disconnects or gets kicked out).
   \item Communication with the atomic clock and updating the atomic clock model.
   \item Sensor data analysis and filter updates.
   \item Raising alarms based on filter status.
@@ -101,6 +120,7 @@ The parser and handler are responsible for parsing data received from a client a
   \item If the client is attempting to identify itself, the ID it attempts to use is checked against the rest of the connected clients. If the ID is already taken and the client attempted to assume the role of a Sensor, the client will get disconnected. If it attempted to assume the role of a Monitor, it will simply be notified that the chosen ID is taken and the request will be ignored. The reason why a Sensor would get disconnected and a monitor would not, is simple: When connecting the Sensor to the server, it should not be any doubt whether or not it has been accepted. If something is wrong, it is better that a user of the system has to deal with it there and then and configure the Sensor correct rather than allowing the user to do mistakes that severely impacts the efficiency of the system. See section \ref{roles} for more information about the Sensor and Monitor roles.
   \item If the attempted ID is available, the client table entry for the client is updated with the requested ID and the server will attempt to load data for the Known Vs. Reported position filter (KRL) data into the clients KRL filter struct. The server will attempt to load this data from a file named \texttt{krl\_data\_sensor<ID>}. If the load fails, the client will be disconnected. It is after all useless without its reference position data. For more information about the KRL filter, see section \ref{kvsrlf}.
 \end{itemize}
+
 
 \subsection{GPS filter}\label{gps_filters}
 There is currently only one filter using GPS data in the Sensor Server implementation to this data. This is the \textit{Known Vs. Reported location filter}. Figure \ref{gps_filters} is a block diagram showing the filter as a part of the Sensor Server.
@@ -362,7 +382,7 @@ Having shared memory segments comes with a price. Whenever two or more processes
 
 Listing \ref{removeclient} shows a typical example of a function locking down access to the shared memory segment containing the list of connected clients, by using a semaphore. In the example (\ref{removeclient}) a client has been disconnected from the server and the the list of connected clients are being updated. The semaphore is necessary to make sure that another process is not attempting to read or write to the segment while the data is deleted. If another process had attempted to execute the \texttt{sem\_wait()} on the semaphore, it would have been put in a queue. Depending on the operating system, it would most likely signal the scheduler to do a context switch since the resource was busy anyway and it therefor should relinquish control of the CPU. Once the semaphores is raised, it can be lowered again by another process. It is important to note that the semaphores are not a function of, or related to the memory segments by anything other than the name. The semaphores are just "flags" used to control access to a resource. There is no automatic raising or lowering of the associated semaphores by reading or writing to a specific shared memory segment. All functions in the sensor server does however use semaphores when dealing with shared memory segments in order to avoid deadlock and race conditions.
 
-\subsection{Parser}\label{parser}
+\subsection{Client input parser}\label{parser}
 The parser used by the Sensor Server is a simple function. As explained in section \ref{parser_and_handler}, every time a client sends data to the Server, the data is sent though the parser in order to detect the purpose of the request. The parser uses the protocol and compares it with the input and looks for a match. Listing \ref{parse_id} shows a sample of code taken from the parser. 
 
 \begin{code}
@@ -392,7 +412,7 @@ The listing (\ref{parse_id}) shows how the parser attempts to find a match betwe
 \subsection{Ready check algorithm}\label{ready_check_alg}
 Every time NMEA data is received and validated, the process that received the data will initiate a ready check. This is done by setting a flag in the client list entry called ready to 1, and calling the \texttt{nmea\_ready()} function. The \texttt{nmea\_ready()} function locks down the client linked list and iterates through it checking if the other processes are ready too. If all the other processes has received valid NMEA data from their respective client, the GPS filters(s) are applied. If they are not ready, the lock is release and the process carries on. This means that the last process to receive NMEA data gets the job of applying the filters \footnote{Since NMEA data is generated every second by the GPS receivers, it might be more appropriate to say that it is the scheduler that decides which process is coming in last. This of course depends on the distance between the Sensor and the Client}.
 
-\section{Protocol}\label{protocol}
+\section{Sensor Server Protocol}\label{protocol}
 The Sensor Server protocol is quite simply a header file containing every keyword or command that the Sensor Server recognizes. The though behind it was that a client application (or script) could import the protocol header file and easily use and recognize commands used between the Server and a Client. Some constraints are also defined in the protocol header file, like maximum parameter size, maximum and minimum command size. The \textit{command codes} used by the parser, is also defined in the protocol header file. See subsection \ref{parser} for more about the use of protocol.
 
 \section{Atomic clock Communication}\label{csac_com}
